# django-resume

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  MCP_SERVER.md  README.md  README.rst  justfile  package-lock.json  package.json  pyproject.toml
docs/: .gitignore  changelog.txt  conf.py  index.rst  index.txt  usage.rst
docs/dev/: application_workflows.txt  backlog.txt  develop.txt  jsonresume.txt  page_plugins.txt
docs/guide/: creating_list_plugins.txt  creating_page_plugins.txt  creating_plugins.txt  creating_simple_plugins.txt  example_project.txt  installation.txt  usage.txt
docs/ref/: list_plugin.txt  pages.txt  plugins.rst  plugins.txt  registry.txt  resume.txt  settings.txt  simple_plugin.txt  views.txt
docs/superpowers/plans/: 2026-06-20-page-plugins-registry.md  2026-06-22-editorial-cover-letter-in-homepage.md
e2e_tests/: cleo_json_resume_roundtrip.py  conftest.py  django_admin_test.py  entrypoint_page_test.py  inline_test.py  json_resume_theme_test.py  overview_and_fallback_test.py  pages.py  portfolio_test.py  settings.py
example/: db.sqlite3
example/core/: apps.py  resume_pages.py
example/core/plugins/: certifications.py  motto.py
example/core/templates/django_resume/pages/headwind/: portfolio.html
example/core/templates/django_resume/pages/plain/: portfolio.html
example/example/: settings.py  urls.py
example/resume_entrypoint_demo/: pyproject.toml
example/resume_entrypoint_demo/resume_entrypoint_demo/: __init__.py  pages.py
example/static/css/: custom.css
example/templates/django_resume/pages/plain/: resume_cv.html
example/templates/django_resume/plugins/certifications/plain/: flat.html  flat_form.html
example/templates/django_resume/plugins/motto/plain/: content.html  form.html
resume/: views.py
src/django_resume/: about.py  admin.py  apps.py  education.py  forms.py  images.py  markdown.py  models.py  plugin_generator.py  plugin_registry.py  plugins.py  projects.py  timelines.py  tokens.py  urls.py  views.py
src/django_resume/entrypoints/: llm_content.py  loc.py  mcp_server.py  mcp_server_debug.py  mcp_server_lazy.py
src/django_resume/formats/json_resume/: dates.py  export.py  importer.py  themes.py  validation.py
src/django_resume/interchange/: conflicts.py  coordinator.py  pointer.py  protocols.py  report.py
src/django_resume/management/commands/: _path_safety.py  create_plugin_from_stdin.py  export_json_resume.py  import_json_resume.py  new_plugin_few_shot_context.py  plugin_few_shot_context.py  remove_data_for_plugin.py  remove_plugin_by_name.py  run_mcp_server.py
src/django_resume/mcp_server/: __init__.py  server.py
src/django_resume/mcp_server/resources/: __init__.py  codebase.py  database.py  documentation.py  schemas.py  templates.py
src/django_resume/mcp_server/tools/: __init__.py  analyze_plugin.py  create_plugin.py  create_plugin_direct.py  debug_plugin.py  list_plugins.py  test_plugin_browser.py  update_plugin_code.py  validate_plugin_code.py
src/django_resume/mcp_server/utils/: __init__.py  code_generator.py  django_setup.py  validator.py
src/django_resume/migrations/: 0001_initial.py  0002_plugin.py  0002_resume_integration_data.py
src/django_resume/pages/: __init__.py  base.py  builtins.py  registry.py
src/django_resume/plugins/: __init__.py  about.py  awards.py  base.py  certifications.py  cover.py  education.py  identity.py  languages.py  permission_denied.py  projects.py  registry.py  skills.py  theme.py  timelines.py  tokens.py
src/django_resume/static/django_resume/css/: edit.css  print.css  styles.css
src/django_resume/static/django_resume/css/editorial/: print.css  screen.css
src/django_resume/static/django_resume/fonts/saira/: OFL.txt
src/django_resume/static/django_resume/img/editorial/: bg-cv-left.avif  bg-cv-right.avif
src/django_resume/static/django_resume/js/: edit.js  editorial-lines.js
src/django_resume/templates/django_resume/about/plain/: form.html
src/django_resume/templates/django_resume/admin/: list_plugin_admin_change_form_htmx.html  list_plugin_admin_flat_form.html  timeline_admin_change_form_htmx.html
src/django_resume/templates/django_resume/cover/plain/: content.html  form.html
src/django_resume/templates/django_resume/identity/plain/: content.html  form.html  form_old.html
src/django_resume/templates/django_resume/json_resume/: theme_selector.html
src/django_resume/templates/django_resume/pages/editorial/: base.html  resume_cv.html  resume_list_main.html
src/django_resume/templates/django_resume/pages/headwind/: base.html  (+2 more)
src/django_resume/templates/django_resume/plain/: base.html  cv.html  education_form.html  projects.html  projects_flat_form.html  projects_item.html  projects_item_form.html  resume_cv.html  resume_detail.html  resume_list.html  resume_list_main.html  timeline.html  timeline_flat.html  timeline_flat_form.html  timeline_item.html  timeline_item_form.html
src/django_resume/templates/resume/admin/: timeline_admin_change_form_htmx.html
src/django_resume/templatetags/: page_nav.py
src/resume/: urls.py
talk/: blogpost.md  claude.md  proposal.md  talk.md  talk_outline.md  talk_slides.md
tests/: awards_test.py  conftest.py  example_urls_test.py  interchange_test.py  json_resume_test.py  languages_test.py  loc_test.py  management_commands_test.py  mardown_test.py  models_test.py  plugin_form_validation_test.py  plugin_generator_test.py  plugin_reload_test.py  plugin_resume_mutation_test.py  plugins_admin_test.py  plugins_admin_views_test.py  plugins_data_test.py  plugins_inline_test.py  plugins_test.py  settings.py  settings_test.py  theme_test.py  timeline_item_form_test.py  timeline_plugin_admin_views_test.py  timeline_plugin_view_test.py  timelines_test.py  views_test.py
tests/fixtures/: jsonresume_schema_sample.json
tests/pages/: autodiscover_test.py  base_test.py  builtins_test.py  capabilities_test.py  entrypoints_test.py  fallback_test.py  nav_ordering_test.py  nav_test.py  registry_test.py
tests/timelines/: admin_views_test.py  conftest.py  plugins_test.py  views_test.py
tests/tokens/: tokens_test.py
(+62 files in other folders)
