[project]
name = "django-resume"
version = "0.1.11"
description = "Add your description here"
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2",
]

[project.urls]
Documentation = "https://django-resume.readthedocs.io/en/latest/"
Source = "https://github.com/ephes/django-resume"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src/django_resume/**/*.py",
]

[tool.hatch.build.targets.sdist]
packages = ["src/django_resume"]

[tool.hatch.build.targets.wheel]
packages = ["src/django_resume"]

[project.optional-dependencies]
dev = [
    "coverage>=7",
    "django-extensions>=3",
    "django-stubs[compatible-mypy]>=5",
    "furo",  # documentation
    "pytest>=8",
    "pytest-django>=4",
    "pytest-playwright>=0.5",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
base_url = "http://localhost:8000"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]
exclude = "[a-zA-Z]*/(migrations)|(example)/(.)*"  # ignore migrations

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/migrations/*",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "pytest-mock>=3.14.0",
]
