[project]
name = "django-resume"
version = "0.1.14"
description = "Add your description here"
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2",
    "nh3>=0.3.3",
]

[project.urls]
Documentation = "https://django-resume.readthedocs.io/en/latest/"
Source = "https://github.com/ephes/django-resume"

[build-system]
requires = ["uv_build>=0.7.8,<0.8.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
base_url = "http://localhost:8000"
testpaths = ["tests"]

filterwarnings = [
    "ignore:Support for class-based `config` is deprecated:DeprecationWarning",
]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]
exclude = "[a-zA-Z]*/(migrations)|(example)/(.)*" # ignore migrations

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*/migrations/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "coverage>=7",
    "django-extensions>=3",
    "django-stubs[compatible-mypy]>=5",
    "furo",                             # documentation
    "llm",                              # generate plugins from prompts
    "llm-claude-3",                     # llm plugin for anthropic models
    "mypy>=1",
    "pytest>=8",
    "pytest-django>=4",
    "pytest-playwright>=0.5",
    "pytest-mock>=3.14.0",
    "rich>=14",
    "ruff>=0.11",
]

[project.scripts]
count-lines-of-code = "django_resume.entrypoints.loc:count_lines_of_code"
llm-content = "django_resume.entrypoints.llm_content:llm_content"
